example/10-nginx-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-deployment-canary
  namespace: krane
  labels:
    app: aggregator
    krane.sh/tier: canary
    krane.sh/canary-policy: my-app
spec:
  selector:
    matchLabels:
      app: aggregator
      krane.sh/tier: canary
  template:
    metadata:
      labels:
        app: aggregator
        krane.sh/tier: canary
    spec:
      containers:
      - name: aggregator
        image: gcr.io/petomalina/aggregator:v1
        ports:
        - containerPort: 80
