example/01-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: krane
  labels:
    app: nginx
    krane.sh/tier: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      krane.sh/tier: stable
  template:
    metadata:
      labels:
        app: nginx
        krane.sh/tier: stable
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.9
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: krane
  labels:
    app: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
