example/02-aggregator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-deployment
  namespace: krane
  labels:
    app: aggregator
    krane.sh/tier: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator
      krane.sh/tier: stable
  template:
    metadata:
      labels:
        app: aggregator
        krane.sh/tier: stable
    spec:
      containers:
        - name: aggregator
          image: gcr.io/petomalina/aggregator:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aggregator-svc
  namespace: krane
  labels:
    app: aggregator
    krane.sh/tier: stable
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: aggregator
    krane.sh/tier: stable
