example/01-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
  namespace: krane
spec:
  host: nginx-service
  subsets:
  - name: stable
    labels:
      krane.sh/tier: stable
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: krane
spec:
  hosts:
  - api.dashly-dev.com
  gateways:
  - krane-gw
  http:
    - match:
      - uri:
          prefix: "/kranetest"
      rewrite:
        uri: "/"
      route:
      - destination:
          host: nginx-service
          subset: stable
